--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "commander": "^11.1.0",
     "node-fetch": "2.6.7",
     "node-gyp": "^10.0.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "conf": "^10.2.0"
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.4",
